--- a/src/Vistas/viewMenu.form
+++ b/src/Vistas/viewMenu.form
@@ -2,78 +2,162 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
+    <Menu class="javax.swing.JMenuBar" name="jmbMenu">
       <SubComponents>
-        <Menu class="javax.swing.JMenu" name="jMenu1">
+        <Menu class="javax.swing.JMenu" name="jmPersona">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Persona"/>
+            <Property name="text" type="java.lang.String" value="Personas"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmPersonaActionPerformed"/>
           </Events>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="JMagregarPersona">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarPersona">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar Persona"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMagregarPersonaActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarPersonaActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="JMeditarPersona">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarEliminarPersona">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Editar o quitar persona"/>
+                <Property name="text" type="java.lang.String" value="Buscar/eliminar persona"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMeditarPersonaActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarEliminarPersonaActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="JMlistarPersona">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiListarPersonas">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Listar persona"/>
+                <Property name="text" type="java.lang.String" value="Listar personas"/>
               </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu2">
+        <Menu class="javax.swing.JMenu" name="jmLaboratorio">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Laboratorio"/>
+            <Property name="text" type="java.lang.String" value="Laboratorios"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="JMagregarLaboratorio">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarLaboratorio">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Agregar Laboratorio"/>
+                <Property name="text" type="java.lang.String" value="Agregar laboratorio"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMagregarLaboratorioActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarLaboratorioActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="JMmodificarLaboratorio">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarEliminarLaboratorio">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Modifcar/Eliminar Laboratorio"/>
+                <Property name="text" type="java.lang.String" value="Bucar/Eliminar laboratorio"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMmodificarLaboratorioActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarEliminarLaboratorioActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="JMlistarLaboratorio">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiListarLaboratorios">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Listar Laboratorio"/>
+                <Property name="text" type="java.lang.String" value="Listar laboratorios"/>
               </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu3">
+        <Menu class="javax.swing.JMenu" name="jmDosis">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Dosis"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarDosis">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarDosisActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarEliminarDosis">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Bucar/Eliminar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarEliminarDosisActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiListarDosis">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Listar laboratorios"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jmCentroDeVacunacion">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Centros de vacunaciones"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarCentroDeVacunacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarCentroDeVacunacionActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarEliminarCentroDeVacunacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Bucar/Eliminar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarEliminarCentroDeVacunacionActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiListarCentrosDeVacunaciones">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Listar laboratorios"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jmCitasDeVacunaciones">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Citas de vacunaciones"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarCitaDeVacunacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Agregar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarCitaDeVacunacionActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarEliminarCitaDeVacunacion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Bucar/Eliminar laboratorio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarEliminarCitaDeVacunacionActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jmiListarCitasDeVacunaciones">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Listar laboratorios"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+        <Menu class="javax.swing.JMenu" name="jmSalir">
           <Properties>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="JMsalir">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiSalir">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JMsalirActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiSalirActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -85,7 +169,7 @@
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
+    <SyntheticProperty name="menuBar" type="java.lang.String" value="jmbMenu"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
@@ -119,12 +203,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="1269" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="688" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="580" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="454" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
